--- a/src/scss/_user-variables.scss
+++ b/src/scss/_user-variables.scss
@@ -5,4 +5,4 @@
 
 // Example of a variable override to change Dashkit's background color
 // Remove the "//" to comment it in and see it in action!
-// $body-bg: #12263F;
+// $body-bg: #FFF;
